src/styles/style.scss
/* footer {
    position: relative;
    bottom:0;
    width: 100%;
    margin-top: -4vh;
    clear: both;
    height: 4vh;
} 

#app {
    min-height: 100vh;
}

.page {
    padding-bottom: 4vh;
} */

::-moz-selection {
    color: $info-invert;
    background: $info;
}

::selection {
    color: $info-invert;
    background: $info;
}

.res-image {
    height: calc(((100vw - (2 *#{$gap}px)) / 16) * 9);
}

.modal-card-foot {
    justify-content: center;
}

.is-justified-center {
    justify-content: center;
}

.is-aligned-center {
    align-items: center;
}

.is-column {
    flex-direction: column;
}

.is-borderless {
    border: none !important;
}

.table {
    td {
        vertical-align: middle;
    }
}

.is-error {
    border-radius: $radius;
    border: 1px solid $danger;
}

.ProseMirror {
    @extend .textarea;
    overflow-y: scroll;
    height: auto;
}

